# findybara

./: .gitignore  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  lib.rs  mac_finder.rs  main.rs  ollama.rs  stats.rs
src/routes/: +page.svelte
